# knative-opa-pocs

./: .gitignore  kopa.code-workspace
ext_auth_opa_client_svc/src/: index.js  opaMiddleware.js
ext_auth_svc_opa/data/: config.yaml
external_authorizer/ext_auth_opa_client_svc/: .dockerignore
external_authorizer/ext_auth_opa_client_svc/k8s/: service.yaml
external_authorizer/ext_auth_opa_client_svc/src/: package-lock.json
external_authorizer/ext_auth_svc/k8s/: service.yaml
external_authorizer/ext_auth_svc_opa/: .dockerignore
external_authorizer/kourier_configs/: add_ext_auth.sh  net-kourier-controller-deployment.yaml
knative_serving_services/: greetings.yaml
knative_serving_services/cloudevents-rust/: Cargo.toml  service.yaml
knative_serving_services/helloworld-python/: app.py
knative_serving_services/lightweight-echo-hosted-testing/: .dockerignore  Cargo.toml
knative_serving_services/multitenancy/: setup.sh  vclusters.sh
knative_serving_services/revision-routing/: service.yaml
kourier_configs/: add_ext_auth_client.sh  add_ext_opa.sh
opa-bundle-server/: nginx.conf
opa-bundle-server/k8s/: service.yaml
opa-bundle-server/scripts/: build_and_deploy.sh
opa-bundle-server/src/: input.json  policy.rego
registry-update/: creds.sh  flow.md  product.md
registry-update/hosted/: application.yml  candidate.yml  ping.yml  pong-envs.yml  pong.yml
registry-update/manifests/: crd-hosted-controller.yml  hosted-controller-cluster-role-binding.yml  hosted-controller-cluster-role.yml  hosted-controller-sa.yml  hosted-controller.yaml  namespace.yml
(+80 files in other folders)
