[package]
name = "knative-cloudevents-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cloudevents-sdk = "0.3.1"
cloudevents-sdk-actix-web = "0.3.1"
cloudevents-sdk-reqwest = "0.3.1"
reqwest = { version = "0.10.4", default-features = false, features = ["rustls-tls"] }
actix-web = "^3"
actix-rt = "^1.1"
serde_json = "^1.0"
url = "^2"
log = "0.4.0"
env_logger = "0.7.1"
